# write-yourself-a-scheme-in-48-hours

./: .gitignore  .hspec  Makefile  README.md  SCHEME.md  scheme.cabal
app/: Main.hs
inc/: stdlib.scm
src/Scheme/: Core.hs  Evaluator.hs  Parser.hs  Runtime.hs
tests/Scheme/: CoreSpec.hs  EvaluatorSpec.hs  ParserSpec.hs
