name:                scheme
version:             0.1.0.0
synopsis:            scheme in 48 hours
license:             BSD3
author:              nervouscloud
maintainer:          maarten.j.jacobs@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library scheme-parser
  exposed-modules:  Scheme.Parser
  build-depends:    base >=4.10 && <4.11
                  , parsec == 3.1.11
  default-language: Haskell2010
  hs-source-dirs:   src

executable scheme
  main-is:             Main.hs
  build-depends:       base >=4.10 && <4.11, scheme-parser
  hs-source-dirs:      app
  default-language:    Haskell2010

Test-Suite scheme-spec
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  build-depends:    base
                  , Cabal >= 1.10
                  , scheme-parser
                  , hspec == 2.4.4
                  , parsec == 3.1.11
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   tests
  other-modules:    Scheme.ParserSpec
